--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.11.4",
     "@netlify/plugin-nextjs": "^5.9.4",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/js-cookie": "^3.0.6",
     "apexcharts": "^4.4.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "font-awesome-icons": "^1.6.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "next": "^15.1.6",
